Changelog
=========

3.1.0 (2018-09-04)
------------------

* Update to Django>=2.0

3.0.1 (2015-08-15)
------------------

* Various fixes for deployment.


3.0.0 (2015-08-13)
------------------

* First release of the integrated "xelpaste" fork.





2.5 (2014-01-21)
----------------

* IRC lexer is now in the default lexer list.
* One-time snippet support. Snippets get automatically deleted after the
  another user looks at it.
* Toggle wordwrap for code snippets.
* General UI and readability improvements.

2.4 (2014-01-11)
----------------

* API accepts the format or lexer via GET too. You can call an API url like
  ``example.com/api/?format=json`` and have the body in POST only.
* Added an option to keep snippets forever.
* ABAP lexer is now in the default lexer list.

2.3 (2014-01-07)
----------------

* API Documentation.
* Full test coverage.
* Removed Twitter button from homepage.
* Slug generation is less predictable.

2.2 (2013-12-18)
----------------

* Added documentation: http://dpaste.readthedocs.org/en/latest/
* Added support for CSRF middleware.
* Windows users can submit the form using Ctrl+Enter.
* The raw view now sends the X-Content-Type-Options=nosniff header.
* Various constants can now be overridden by settings.
* Support for `python setup.py test` to run the tox suite.

2.1 (2013-12-14)
----------------

* Changes and fixes along the package management.

2.0 (2013-11-29)
----------------

* A huge cleanup and nearly total rewrite.
* dpaste now includes a Django project which is used on www.dpaste.de
  as well as hooks to get it integrated into existing projcts.