@@ -12,4 +12,7 @@ coverage
 sphinx
 sphinx_rtd_theme
 check-manifest
+
+# Release
 wheel
+zest.releaser[recommended]
