@@ -8,3 +8,13 @@ ignore =
     xelpaste/static
     xelpaste/assets/*
     xelpaste/assets
+
+[zest.releaser]
+; semver-style versions
+version-levels = 3
+
+; Version flag location (we use __version__)
+python-file-with-version = xelpaste/__init__.py
+
+[distutils]
+index-servers = pypi
